--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   # Auth + Notifications
   firebase_core: ^3.12.1
   firebase_messaging: ^15.2.4
+  flutter_local_notifications: ^18.0.1
   google_sign_in: ^6.2.2
 
   # Backend
