--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,19 +18,19 @@ dependencies:
   get_it: ^9.2.0
 
   # Auth + Notifications
-  firebase_core: ^3.12.1
-  firebase_messaging: ^15.2.4
-  flutter_local_notifications: ^18.0.1
-  google_sign_in: ^6.2.2
+  firebase_core: ^4.4.0
+  firebase_messaging: ^16.1.1
+  flutter_local_notifications: ^20.1.0
+  google_sign_in: ^7.2.0
 
   # Backend
   supabase_flutter: ^2.9.0
 
   # Navigation
-  go_router: ^14.8.1
+  go_router: ^17.1.0
 
   # QR Code
-  mobile_scanner: ^6.0.5
+  mobile_scanner: ^7.2.0
   qr_flutter: ^4.1.0
 
   # UI
@@ -44,10 +44,10 @@ dependencies:
   # Images + Fonts
   cached_network_image: ^3.4.1
   flutter_svg: ^2.0.17
-  google_fonts: ^6.2.1
+  google_fonts: ^8.0.2
 
   # Charts
-  fl_chart: ^0.70.2
+  fl_chart: ^1.1.1
 
   # Prayer Times
   adhan: ^2.0.0+1
@@ -58,12 +58,12 @@ dependencies:
 
   # Network
   dio: ^5.7.0
-  connectivity_plus: ^6.1.4
+  connectivity_plus: ^7.0.0
 
   # Utils
   intl: ^0.20.2
-  permission_handler: ^11.3.1
-  share_plus: ^10.1.4
+  permission_handler: ^12.0.1
+  share_plus: ^10.1.4  # 12.x فيه أخطاء build على Android
   printing: ^5.13.5
   uuid: ^4.5.1
   equatable: ^2.0.7
