--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,8 +49,7 @@ dependencies:
   # Charts
   fl_chart: ^1.1.1
 
-  # Prayer Times
-  adhan: ^2.0.0+1
+  # Prayer Times (عبر Aladhan API — لا حزمة محلية)
 
   # Offline Storage
   sqflite: ^2.4.2
@@ -59,6 +58,11 @@ dependencies:
   # Network
   dio: ^5.7.0
   connectivity_plus: ^7.0.0
+
+  # Map (OSM — free)
+  flutter_map: ^8.0.0
+  latlong2: ^0.9.1
+  geolocator: ^13.0.2
 
   # Utils
   intl: ^0.20.2
